--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="term_of_validity">到期时间： %1$s</string>
     <string name="surplus_days">还有%1$s天</string>
     <string name="apply_card_result">您申请的%1$s正在审核中</string>
+    <string name="parking_charge_hint">温馨提示：\n应缴金额以支付时间为准，确认缴费后请在15分钟之内离场，否则将会重新计算费用！</string>
+
 
     <!--city picker-->
     <string name="cp_select_city">选择城市</string>
