--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,8 @@
 
     <!--物业缴费-->
     <string name="deal_success">交易成功</string>
-    <string name="payment_method">付款方式</string>
+    <string name="payment_method">支付方式</string>
+    <string name="payment_channel">支付渠道</string>
     <string name="payment_instructions">缴费说明</string>
     <string name="payment_number">户　　号</string>
     <string name="creat_time">创建时间</string>
